2018-07-18  Julien Bect  <julien.bect@centralesupelec.fr>

	stk_param_estim.m: One more tiny step toward lnv objects (bis)

	* param/estim/private/stk_param_check_lnv0.m: Gather all lnv0
	checks in this subfunction to reduce clutter in stk_param_estim.
	At the same time, rewrite some of the checks in order to accept
	objects as well.
	* param/estim/stk_param_estim.m: Use the new private function.
	Also, in the case where lnv0 is not provided, adapt to deal with
	object case as well.
	* examples/03_miscellaneous/stk_example_misc03.m: Declare noisy
	models properly (estimating the variance of the noise for a
	noiseless model is no longer accepted).

2018-07-17  Julien Bect  <julien.bect@centralesupelec.fr>

	stk_param_estim.m: One more tiny step toward lnv objects

	* param/estim/stk_param_estim.m: Do not check directly if lnv0 is
	OK, since lnv0 might be a parameter object.  Instead, extract the
	vector of optimizable parameters, and do the checking on it.

2018-07-16  Julien Bect  <julien.bect@centralesupelec.fr>

	stk_make_matcov.m: Direct evaluation of covariance parameter objects

	* core/stk_make_matcov.m: Unofficial support for direct evaluation
	of covariance parameter objects, ignoring
	model.covariance_type. This is introduced temporarily to support
	some code by R. Stroh but should not be advertised as it is...

2018-07-15  Julien Bect  <julien.bect@centralesupelec.fr>

	Deprecate stk_noisecov

	* covfcs/stk_noisecov.m: Mark as deprecated.
	* core/stk_covmat_noise.m: New function, cherry-picked from branch
	covmat and then modified, to serve as a replacment for
	stk_noisecov.  Considered as internal for the time being.
	* core/stk_get_observation_variances.m: Remove redundant code and
	call stk_covmat_noise instead.
	* core/@stk_model_gpposterior/stk_get_observation_variances.m:
	Call stk_covmat_noise directly.
	* core/stk_make_matcov.m: Use stk_covmat_noise instead of
	stk_noisecov.
	* param/estim/stk_param_loomse.m: Idem.